Unify title styles, add project title, move Add buttons to the header

--- a/app/styles/application.sass
+++ b/app/styles/application.sass
@@ -69,3 +69,13 @@ div.column_wrap h2
 
 .activity_block a, .starter a, .thread_title a, .before a
   color: #333
+
+.text_actions
+  float: right
+  font-size: 12px
+  color: rgb(200,200,200)
+  margin: 0
+  a.add_button
+    text-decoration: none
+  a
+    text-decoration: underline
