--- a/app/views/organizations/appearance.haml
+++ b/app/views/organizations/appearance.haml
@@ -1,7 +1,7 @@
 - content_for :stylesheet_includes do
   = stylesheet_link_tag 'colorpicker', :media => :screen
 
-%h2=h @organization
+%h2= t('.title', :organization => @organization)
 
 - if can?(:admin, @organization)
   = form_for @organization, :html => { :multipart => true } do |f|
