--- a/app/views/projects/edit.haml
+++ b/app/views/projects/edit.haml
@@ -1,7 +1,7 @@
 - content_for :column do
   = project_settings_navigation
 
-%h2= t(".title_#{@sub_action}")
+%h2= t(".title_#{@sub_action}", :project => @current_project)
 
 - sub_params = @sub_action == 'ownership' ? transfer_project_path(@current_project) : nil
 
