--- a/app/views/shared/_navigation.html.haml
+++ b/app/views/shared/_navigation.html.haml
@@ -48,7 +48,7 @@
         .el= link_to t('organizations.column.admin_projects'), projects_organization_path(organization), :class => 'ajax'
         - if can?(:admin, organization)
           .el= link_to t('organizations.column.admin_users'), organization_memberships_path(organization), :class => 'ajax'
-          .el= link_to t('organizations.column.appearance'), appearance_organization_path(organization), :class => 'ajax'
+          .el= link_to t('organizations.column.appearance'), appearance_organization_path(organization), :class => ''
           .el= link_to t('organizations.column.delete'), delete_organization_path(organization), :class => 'ajax'
     - unless Teambox.config.community
       .el= link_to t('.show_all_organizations'), organizations_path, :class => 'more ajax'
