--- a/app/views/organizations/projects.haml
+++ b/app/views/organizations/projects.haml
@@ -1,4 +1,4 @@
-%h1= t('.title', :name => h(@organization))
+%h2= t('.title', :organization => @organization)
 
 - unless Teambox.config.community
   %p= t('.instructions_html', :organizations_link => organizations_path)
