--- a/app/views/uploads/index.haml
+++ b/app/views/uploads/index.haml
@@ -1,11 +1,14 @@
-= render @uploads, :activity => false
+- if can? :upload_files, @current_project
+  - if @upload.errors.empty?
+    .text_actions
+      = link_to content_tag(:span, t('.new_file')), new_project_upload_path(@current_project), :class => 'add_button', :id => 'upload_file_button'
 
-- content_for :column do
-  - if can? :upload_files, @current_project
-    - if @upload.errors.empty?
-      = link_to content_tag(:span, t('.new_file')), new_project_upload_path(@current_project), :class => 'add_button'
+%h2= t('.title', :project => @current_project)
+
+- if can? :upload_files, @current_project
+  - if @upload.errors.empty?
     = render 'uploads/form', :project => @current_project, :upload => @upload, :page => nil
-    
-    %p= t('.max_upload_size', :mb => Teambox.config.asset_max_file_size)
-  - else
-    %p= t('.cant_create')
+- else
+  %p= t('.cant_create')
+
+= render @uploads, :activity => false
