Compacting a bit the layout for Organizations#appearance

--- a/app/styles/_organizations.sass
+++ b/app/styles/_organizations.sass
@@ -122,3 +122,11 @@
     padding: 10px
     p
       margin: 10px 0 20px
+
+.appearance_organizations
+
+  .color_field
+    display: inline-block
+    width: 190px
+  .option_fields
+    margin: 40px 0px
