--- a/app/views/projects/list.haml
+++ b/app/views/projects/list.haml
@@ -12,9 +12,9 @@
           %p.project
             = link_to h(project), project
             %span.status
-              = t('organizations.active_projects.role', :role => @roles[role])
+              = t('organizations.active_projects.role_html', :role => @roles[role])
               - if @roles[role] == 'admin'
-                = "(" + link_to(t('organizations.active_projects.settings'), edit_project_path(project)) + ")"
+                =raw "(" + link_to(t('organizations.active_projects.settings'), edit_project_path(project)) + ")"
   - else
     %p.none= t('organizations.active_projects.no_active_projects')
 
