--- a/app/views/shared/_navigation.html.haml
+++ b/app/views/shared/_navigation.html.haml
@@ -28,7 +28,7 @@
   -# My Tasks
   .el#my_tasks
     = link_to t('.my_tasks'), task_lists_path, :class => 'tasks'
-    %span= current_user.pending_tasks.length
+    %span.clickable= link_to current_user.pending_tasks.length, task_lists_path(:filter_assigned => 'mine'), :class => 'hoverable', :'data-hoverable-class' => 'left', :id => 'open_my_tasks', :title => t('.open_my_tasks')
   .contained
     - for task in current_user.pending_tasks
       .el.task{ :id => "my_task_#{task.id}"}
