--- a/app/views/uploads/_upload.haml
+++ b/app/views/uploads/_upload.haml
@@ -1,23 +1,21 @@
-%div[upload]
-  .info
-    - icon_path = "file_icons/48px/#{h upload.file_type}.png"
-    - if Rails.root.join("public/images/#{icon_path}").exist?
-      = link_to image_tag(icon_path), upload.url, :class => 'file_icon', :rel => (upload.image? ? 'facebox' : '')
-    - else
-      = link_to h(upload.file_type), upload.url, :class => upload.file_type, :rel => (upload.image? ? 'facebox' : '')
-  - unless rss?
-    .date= posted_date upload.created_at
-  .file
-    = link_to_upload(upload, upload.file_name)
-    == (#{number_to_human_size(upload.size)})
+%div[upload]{ :class => cycle('alternate', '') }
+  .header
+    .icon
+      - icon_name = Upload::ICONS.include?(upload.file_type) ? upload.file_type : '_blank'
+      - icon_path = "file_icons/16px/#{icon_name}.png"
+      = image_tag icon_path
+    .file
+      = link_to_upload upload, upload.file_name
+    .size
+      = number_to_human_size upload.size
+    .author
+      = upload.user
+    .more
+      [+]
 
-  - unless upload.description.blank?
-    .description=h upload.description
-    
-  .reference
-    = activity_title upload
-
-    - if not activity and can?(:update, upload) and request.format != :m
-      &ndash;
+  .reference{ :style => 'display: none' }
+    = link_to_upload upload, "Download file"
+    - if can?(:update, upload) # and request.format != :m
       = link_to t('.remove'), [upload.project, upload], :'data-remote' => true,
-          :'data-method' => 'delete', :'data-confirm' => t('confirm.delete_upload')
+        :'data-method' => 'delete', :'data-confirm' => t('confirm.delete_upload')
+
