Add time tracking page to the sidebar.
- Change data handling to handle how navigation bar works
- Delayed callback added to navigation bar for loading

--- a/app/styles/_sidebar.sass
+++ b/app/styles/_sidebar.sass
@@ -70,6 +70,8 @@
       background-image: url(/famfamfam/comment.png)
     &.tasks
       background-image: url(/famfamfam/tick.png)
+    &.time
+      background-image: url(/famfamfam/time.png)
     &.pages
       background-image: url(/famfamfam/layout_content.png)
     &.files
