--- a/app/views/shared/_search_bar.haml
+++ b/app/views/shared/_search_bar.haml
@@ -2,8 +2,8 @@
   .search_bar
     - per_project = !current_user.can_search?
     - search_destination = per_project ? project_search_path(@current_project) : search_path
-    = form_tag search_destination, :method => 'get', :class => 'search', :id => 'search' do
-      = text_field_tag :q, nil, :type => 'search', :id => nil,
+    - form_tag search_destination, :method => 'get', :class => 'search', :id => 'search' do
+      = text_field_tag :q, nil, :type => 'search', :id => :searchbox,
         :placeholder => per_project ? t('search.placeholder_in_project') : t('search.placeholder')
       - if per_project
         = hidden_field_tag :project_id, @current_project
