--- a/app/views/emailer/notify_task.html.haml
+++ b/app/views/emailer/notify_task.html.haml
@@ -25,7 +25,7 @@
   = emailer_recent_tasks(@project, @recipient)
 
   .actions{ :style => 'font-size: 14px; color: rgb(100,100,100); padding: 15px' }
-    %p= t('emailer.notify.view_this_task_online', :link => link_to(t('emailer.notify.task_link'), project_task_url(@project, @task), :style => inline_organization_link_colour))
+    %p= t('emailer.notify.view_this_task_online_html', :link => link_to(t('emailer.notify.task_link'), project_task_url(@project, @task), :style => inline_organization_link_colour))
     = emailer_answer_to_this_email
 
   .footer{ :style => email_text(:small) }
@@ -34,5 +34,5 @@
       = t('emailer.notify.are_watching_task', :count => @task.watchers.size)
     = emailer_commands_for_tasks(@recipient)
     %p
-      = t('emailer.notify.stop_watching_link', :stop_watch => link_to(t('emailer.notify.stop_watch'), project_task_url(@project, @task), :style => inline_organization_link_colour) )
-      = t('emailer.notify.notification_settings_link', :settings_link => link_to(t('emailer.notify.settings_link'), account_notifications_url, :style => inline_organization_link_colour) )
+      = t('emailer.notify.stop_watching_link_html', :stop_watch => link_to(t('emailer.notify.stop_watch'), project_task_url(@project, @task), :style => inline_organization_link_colour) )
+      = t('emailer.notify.notification_settings_link_html', :settings_link => link_to(t('emailer.notify.settings_link'), account_notifications_url, :style => inline_organization_link_colour) )
