Issues with upload widget in pages caused by an irregularity that rails3 tightened up
Previously in Rails 2.x, setting the form tag's id/class when using
form_for was either overriden (or appended to) if passing in an object.

In rails3, if you specify a :id/:class key in html options, then that wins
and in the case of the upload widget this meant that the upload form no
longer had id='new_upload' on which the widget code depends to find the
form.

--- a/app/views/uploads/_form.haml
+++ b/app/views/uploads/_form.haml
@@ -1,8 +1,6 @@
-- hidden = page || (action_name == 'index' && upload.errors.empty?)
 - is_valid = upload.asset.errors.empty? && upload.errors.empty?
 
-
-= form_for [project, upload], :html => { :multipart => true, :id => 'upload_file_form', :style => hidden ? 'display: none' : nil, :class => "upload_form app_form #{'form_error' unless upload.errors.empty?}" } do |f|
+= form_for [project, upload], upload_form_html_options(page,upload) do |f|
   .description.text_field
     = f.label :description, t('.description_html')
     = f.text_field :description
