--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -12,6 +12,7 @@
     = yield :stylesheet_includes
     = stylesheet_link_tag 'cucumber', :media => :screen if Rails.env.cucumber?
     = organization_link_colour
+    = trimmer_include_tag
     = sprockets_include_tag
     = yield :js_includes
     = javascript_tag do
