Limit with for images embedded with Markdown

--- a/app/styles/_typography.sass
+++ b/app/styles/_typography.sass
@@ -94,6 +94,8 @@ textarea.placeholder, input.placeholder
       border: 1px solid #dddddd
     th
       font-weight: bold
+  img
+    max-width: 540px
 
 div.column
   h2
