--- a/app/views/shared/_navigation.html.haml
+++ b/app/views/shared/_navigation.html.haml
@@ -43,8 +43,8 @@
       .el.task{ :id => "my_task_#{task.id}"}
         = link_to task, [task.project, task], :class => ''
         = render_due_on(task,current_user)
-    .el
-      = link_to t('.show_all_tasks'), task_lists_path, :class => 'more'
+    .el= link_to t('.show_all_tasks'), task_lists_path, :class => 'more'
+    .el= link_to t('.gantt_and_calendars'), gantt_view_task_lists_path, :class => 'more'
 
   -# Organizations
   .el#my_organizations= link_to t('.organizations'), organizations_path, :class => 'people'
