Fix mobile views. Explicitly respond to :html and :m.

--- a/app/views/projects/index.m.haml
+++ b/app/views/projects/index.m.haml
@@ -4,4 +4,4 @@
       .project
         = link_to h(project), project_path(project)
     .project
-      = link_to "New Project", new_project_path, :class => 'new'
+      = link_to t('.new_project'), new_project_path, :class => 'new'
