--- a/app/views/task_lists/index.m.haml
+++ b/app/views/task_lists/index.m.haml
@@ -1,6 +1,6 @@
 #page
   - if @current_project
-    %h2= t('.tasks_for_project')
+    %h2= t('.tasks_for_project', :project => @current_project.name)
     
     - if can? :make_task_lists, @current_project
       = task_list_form(@current_project,TaskList.new)
