Adding spacing for images inside textilized areas

--- a/app/styles/_typography.sass
+++ b/app/styles/_typography.sass
@@ -96,6 +96,7 @@ textarea.placeholder, input.placeholder
       font-weight: bold
   img
     max-width: 540px
+    margin: 10px 0
 
 div.column
   h2
