--- a/app/views/comments/_fields.haml
+++ b/app/views/comments/_fields.haml
@@ -28,7 +28,7 @@
 
     - if task_form
       = link_to t('comments.hours.tooltip'), '#hours', :class => 'add_hours_icon hoverable', :title => "Log hours"
-    
+
       .task_actions
         = task_form.label :status
         = task_form.select :status, task_statuses_for_select
@@ -36,9 +36,8 @@
         = task_form.select :assigned_id, [], {}, :'data-assigned' => task_form.object.assigned_id
         = task_form.label :due_on
         = date_picker(task_form, :due_on)
-
     - if local_assigns[:conversation_form] && local_assigns[:project]
-      - if can? :update, f.object
+      - if f.object.target && can?(:update, f.object.target) && can?(:make_tasks, local_assigns[:project])
         %span.convert_to_task
           = link_to t('comments.conversations.convert_to_task'), '#convert_to_task'
         .convert_to_task{:style => 'display:none;'}
