Display more options beneath the frequently used on sidebar

--- a/app/styles/_sidebar.sass
+++ b/app/styles/_sidebar.sass
@@ -96,6 +96,9 @@
       background-image: url(/famfamfam/cog.png)
     &.loading
       background-image: url(/images/loading.gif)
+    &.show_more, &.show_less
+      font-size: 10px
+      color: #777
 
 .more_links
   margin-left: -15px
