--- a/app/views/shared/_navigation.html.haml
+++ b/app/views/shared/_navigation.html.haml
@@ -63,3 +63,8 @@
           .el= link_to t('organizations.column.delete'), delete_organization_path(organization), :class => 'ajax'
     - unless Teambox.config.community
       .el= link_to t('.show_all_organizations'), organizations_path, :class => 'more ajax'
+
+  -# More options
+  .el#show_more= link_to t('.show_more'), "#", :class => 'show_more'
+  .el.extra{ :style => 'display: none' }= link_to t('.time'), time_path, :class => 'ajax time'
+  .el.extra{ :style => 'display: none' }= link_to t('.affiliate'), affiliate_path, :class => 'affiliate'
