--- a/app/views/emailer/forgot_password.html.haml
+++ b/app/views/emailer/forgot_password.html.haml
@@ -16,5 +16,5 @@
 
   .footer{ :style => email_text(:small) }
     %p= t('emailer.reset_password.report_abuse', :email => @user.email)
-    %p= t('emailer.reset_password.problems', :support => Teambox.config.support)
+    %p= t('emailer.reset_password.problems_html', :support => Teambox.config.support)
 
