--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -8,6 +8,7 @@
     %title= "#{@page_title} Teambox"
     = stylesheet_link_tag 'application', :media => :screen
     = stylesheet_link_tag 'print', :media => :print
+    = stylesheet_link_tag 'cucumber', :media => :screen if Rails.env.cucumber?
     = yield :stylesheet_includes
     = organization_link_colour
     = sprockets_include_tag
