--- a/app/styles/application.sass
+++ b/app/styles/application.sass
@@ -76,7 +76,7 @@ div.column_wrap h2
   font-size: 12px
   color: rgb(200,200,200)
   margin: 0
-  a.add_button
+  a.add_button, a.new_task_list_link
     text-decoration: none
   a
     text-decoration: underline
