--- a/app/styles/_forms.sass
+++ b/app/styles/_forms.sass
@@ -72,7 +72,7 @@ form
     ul
       padding-left: 20px
 
-  .fieldWithErrors
+  .field_with_errors
     input
       background: rgb(255, 230, 230)
       border: 1px rgb(200, 100, 100) solid
