--- a/app/views/layouts/apidocs.haml
+++ b/app/views/layouts/apidocs.haml
@@ -5,7 +5,7 @@
     = csrf_meta_tag
     %link{ :rel => "shortcut icon", :href => "/favicon.ico" }
     %title Teambox
-    = stylesheet_link_tag 'apidocs'
+    = include_stylesheets :apidocs
     = sprockets_include_tag
 
   %body{ :class => "#{location_name} #{I18n.locale} #{Rails.env}"}
