--- a/app/views/layouts/sites.haml
+++ b/app/views/layouts/sites.haml
@@ -4,7 +4,7 @@
     %meta{ 'http-equiv' => "content-type", :content => "text/html;charset=utf-8" }
     %link{ :rel => "shortcut icon", :href => "/favicon.ico" }
     %title=h @organization
-    = stylesheet_link_tag 'sessions', 'sites'
+    = include_stylesheets :sites
     = sprockets_include_tag
 
   %body{ :class => "#{location_name} #{I18n.locale} #{Rails.env}"}
