--- a/app/views/tasks/_fields.html.haml
+++ b/app/views/tasks/_fields.html.haml
@@ -8,23 +8,12 @@
   
 - if f.object.new_record?
   %p.optional= t('.optional')
-
-  - f.object.comments.build unless f.object.comments.any?
+  
+  - f.object.comments.build
   = f.fields_for :comments do |comment_fields|
     .body.text_field
       = comment_fields.label :body, t('.body_html')
       = comment_fields.text_area :body, :rows => 3
-    .extra
-      .upload_area
-        %p= t('uploads.new.select_a_file')
-        - comment_fields.object.uploads.build unless comment_fields.object.uploads.any?
-        = comment_fields.fields_for :uploads do |uploads|
-          = uploads.file_field :asset, :id => 'upload_file'
-      .actions
-        .attach
-          %span= t('comments.fields.attach') + ": "
-          = link_to t('uploads.comment_upload_link'), '#uploads', :class => 'attach_icon hoverable', :title => "Attach a file"
-        = render 'google_docs/form', :f => comment_fields
 
   .assigned_to.text_field
     = f.label :assigned_id, t('comments.new.assigned_to')
