--- a/app/views/tasks/new.haml
+++ b/app/views/tasks/new.haml
@@ -1,3 +1,8 @@
-= form_for [@current_project,@task_list,@task], :html => {:class => 'app_form new_task', :multipart => true} do |f|
+%h2= t('.title')
+
+
+%p=h @task_list
+
+= form_for [@current_project,@task_list,@task], :html => {:class => 'app_form'} do |f|
   = render 'tasks/fields', :f => f, :project => @current_project, :task_list => @task_list, :task => @task
   = f.submit t('.submit'), :'data-disable-with' => t('.sending')
