Navigation, allow to click on selected link when its not exact match.

--- a/app/styles/_sidebar.sass
+++ b/app/styles/_sidebar.sass
@@ -25,7 +25,7 @@
             color: white
         a
           padding: 2px 4px
-    &.selected, &.selected:hover
+    &.selected, &.children-selected, &.selected:hover, &.children-selected:hover
       background: lighten($navbar, 20)
     &:hover
       background: lighten($navbar, 30)
