Lowercase and gray links for the footer

--- a/app/styles/_layout.sass
+++ b/app/styles/_layout.sass
@@ -76,8 +76,7 @@ p.flash-notice
   margin-top: 2em
   border-top: 1px solid #ccc
   padding: .5em 0 2em 0
-  color: #8c8c8c
-  text-transform: uppercase
+  color: #777
   .support
     list-style: none
     float: right
