Removing the preview_button from forms
Preview is now automatically triggered whenever you press the Enter key.

--- a/app/views/comments/_fields.haml
+++ b/app/views/comments/_fields.haml
@@ -60,5 +60,5 @@
 
   .submit
     %span.help= formatting_documentation_link
-    = preview_button
+    = #preview_button
     = f.submit t('comments.new.submit'), :'data-disable-with' => t('comments.new.sending')
