--- a/app/styles/_header.sass
+++ b/app/styles/_header.sass
@@ -3,6 +3,7 @@
   border:
     bottom: 1px solid #ddd
   +gradient-bottom(#eee)
+  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#FFFFFF, endColorstr=#EEEEEE, GradientType=0)"
   height: 40px
 
 div.header
