Fallback for browser without inputsearch and borderraduis (=< IE8)

--- a/app/styles/_search.sass
+++ b/app/styles/_search.sass
@@ -13,11 +13,17 @@
       display: none
     .no-inputsearch &
       input[type=search]
+        width: 10em
         border: 1px solid silver
+    .no-inputsearch.borderradius &
+      input[type=search]
         padding: 3px 1em 2px 1em
         +rounded(10px)
-        width: 10em
         +box-shadow(inset rgba(0,0,0,.2) 0px 1px 2px)
+    .no-inputsearch.no-borderradius &
+      input[type=search]
+        padding: 2px
+
 
 .index_search
   .search_bar
