Putting back extension-based icons
Conflicts:

	app/styles/_pages.sass

--- a/app/views/uploads/_upload_slot.haml
+++ b/app/views/uploads/_upload_slot.haml
@@ -6,7 +6,9 @@
         %img{:src => upload.url}
   - else
     .info
-      = link_to h(upload.file_type), upload.url, :class => upload.file_type, :rel => (upload.image? ? 'facebox' : '')
+      - icon_name = Upload::ICONS.include?(upload.file_type.downcase) ? upload.file_type : '_blank'
+      - icon_path = "file_icons/48px/#{icon_name}.png"
+      = link_to image_tag(icon_path), upload.url, :class => upload.file_type, :rel => (upload.image? ? 'facebox' : '')
   .block
     .filename.show_details
       .body
