New thread layout, with title on top and no thumb avatar

--- a/app/styles/_preview.sass
+++ b/app/styles/_preview.sass
@@ -9,8 +9,8 @@ form
 .thread
   form
     div.preview
-      margin: 4px 12px 4px 42px
+      margin: 4px 18px 4px 0
 
 form.new_conversation
   div.preview
-    margin: 4px 3px 4px 33px
+    margin: 4px 19px 4px 0
