--- a/app/styles/_tasks.sass
+++ b/app/styles/_tasks.sass
@@ -372,3 +372,10 @@ p.view_for_all
     color: #555
     text-decoration: underline
     padding-top: 2px
+
+.task_inline
+  .thread
+    margin: 0 0 0 50px
+    width: 590px
+    .comment_header
+      display: none
