--- a/app/views/comments/_fields.haml
+++ b/app/views/comments/_fields.haml
@@ -2,7 +2,8 @@
 
 .field.text_area
   %a.micro_avatar.my_avatar{ :href => '#' }
-  = f.text_area :body, :placeholder => local_assigns[:placeholder], :id => nil, :style => request.xhr? ? 'max-height: 300px' : nil
+  .textarea
+    = f.text_area :body, :placeholder => local_assigns[:placeholder], :id => nil, :style => request.xhr? ? 'max-height: 300px' : nil
 
 .extra
   - if task_form
