Fixing styles for Attach buttons

--- a/app/styles/_comments.sass
+++ b/app/styles/_comments.sass
@@ -47,6 +47,7 @@ form.new_comment, form.edit_comment
       font-size: 14px
       padding: 2px 4px
       margin-right: 1em
+
   .actions
     display: inline-block
     span
@@ -71,7 +72,8 @@ form.new_comment, form.edit_comment
       select[name="task[assigned_id]"]
         width: 130px
     div.attach
-      display: inline
+      display: inline-block
+      margin-right: 10px
     div.convert_to_task
       top: 8px
       width: 600px
