--- a/app/styles/_google_docs.sass
+++ b/app/styles/_google_docs.sass
@@ -1,6 +1,7 @@
 // the google docs included in the comment box
 .google_docs_attachment
-  display: inline
+  display: inline-block
+  margin-right: 5px
 
 // The list on a conversation item
 ul.google_docs_list, .google_docs_attachment ul.file_list
@@ -20,7 +21,6 @@ ul.google_docs_list, .google_docs_attachment ul.file_list
       margin:
         right: 6px
       vertical-align: middle
-
 
 // The list of google documents in the modal box
 #google_docs
