--- a/app/views/comments/_fields.haml
+++ b/app/views/comments/_fields.haml
@@ -15,7 +15,6 @@
 
   .upload_area
     %p= t('uploads.new.select_a_file')
-
     - f.object.uploads.build
     = f.fields_for :uploads do |fields|
       = fields.file_field :asset, :id => 'upload_file'
@@ -24,12 +23,11 @@
     .attach
       %span= t('.attach') + ": "
       = link_to t('uploads.comment_upload_link'), '#uploads', :class => 'attach_icon hoverable', :title => "Attach a file"
-
-    = render 'google_docs/form', :f => f
+      = render 'google_docs/form', :f => f
+      - if task_form
+        = link_to t('comments.hours.tooltip'), '#hours', :class => 'add_hours_icon hoverable', :title => "Log hours"
 
     - if task_form
-      = link_to t('comments.hours.tooltip'), '#hours', :class => 'add_hours_icon hoverable', :title => "Log hours"
-
       .task_actions
         = task_form.label :status
         = task_form.select :status, task_statuses_for_select
@@ -37,6 +35,7 @@
         = task_form.select :assigned_id, [], {}, :'data-assigned' => task_form.object.assigned_id
         = task_form.label :due_on
         = date_picker(task_form, :due_on)
+
     - if local_assigns[:conversation_form] && local_assigns[:project]
       - if f.object.target && can?(:update, f.object.target) && can?(:make_tasks, local_assigns[:project])
         %span.convert_to_task
