nicer simple mail

--- a/app/views/emailer/simple_message.html.haml
+++ b/app/views/emailer/simple_message.html.haml
@@ -2,7 +2,7 @@
 
   = dont_answer
 
-  %p{ :style => email_text(:small) }
+  %p{ :style => email_box }
     = @message
 
   .footer{ :style => email_text(:small) }
