Point and click to add watchers to any comment

--- a/app/styles/_comments.sass
+++ b/app/styles/_comments.sass
@@ -53,7 +53,7 @@ form.new_comment, form.edit_comment
     span
       font-size: 12px
       margin-right: 5px
-    .add_hours_icon, .attach_icon
+    .add_hours_icon, .attach_icon, .add_watchers
       text-indent: -9999em
       margin-right: 5px
       top: 2px
@@ -118,6 +118,11 @@ form.new_comment, form.edit_comment
         display: none
       span
         margin-left: 10px
+    span.new
+      font-size: 10px
+      position: relative
+      top: -2px
+      color: #777
   .submit
     float: right
     display: inline-block
