--- a/app/styles/_threads.sass
+++ b/app/styles/_threads.sass
@@ -82,3 +82,26 @@
     margin: 0 0 20px
   .thread.collapsed
     margin: 0
+
+.add_watchers_box
+  margin-left: 45px
+  padding: 5px 0 20px
+  max-height: 200px
+  overflow-y: auto
+  p
+    font-size: 11px
+    font-weight: bold
+  .watcher
+    display: inline-block
+    width: 140px
+    margin: 2px 0
+    a
+      font-size: 12px
+      color: black
+      overflow: hidden
+      white-space: nowrap
+      text-overflow: ellipsis
+      border-bottom: 1px dashed #ccc
+      &:hover
+        color: $link_hover
+        text-decoration: none
