--- a/app/views/comments/_fields.haml
+++ b/app/views/comments/_fields.haml
@@ -19,6 +19,9 @@
     = f.fields_for :uploads do |fields|
       = fields.file_field :asset, :id => 'upload_file'
 
+  .add_watchers_box{ :style => 'display: none' }
+    %p= t('comments.watchers.explain') 
+
   .actions
     .attach
       %span= t('.attach') + ": "
@@ -26,6 +29,7 @@
       = render 'google_docs/form', :f => f
       - if task_form
         = link_to t('comments.hours.tooltip'), '#hours', :class => 'add_hours_icon hoverable', :title => "Log hours"
+      = link_to "Watchers", '#watchers', :class => 'add_watchers hoverable', :title => "Notify people"
 
     - if task_form
       .task_actions
@@ -35,6 +39,11 @@
         = task_form.select :assigned_id, [], {}, :'data-assigned' => task_form.object.assigned_id
         = task_form.label :due_on
         = date_picker(task_form, :due_on)
+
+    - if !local_assigns[:project]
+      %span.new{ :style => 'display: none' }
+        &larr; &nbsp;&nbsp;
+        = t('comments.watchers.popup_note_html')
 
     - if local_assigns[:conversation_form] && local_assigns[:project]
       - if f.object.target && can?(:update, f.object.target) && can?(:make_tasks, local_assigns[:project])
