--- a/app/styles/_typography.sass
+++ b/app/styles/_typography.sass
@@ -48,6 +48,7 @@ textarea.placeholder, input.placeholder
 .textilized
   font-size: 12px
   color: #010101
+  overflow-y: hidden
   h1, h2
     font-size: 16px
     border-bottom: 0
