Changing .comments .info to relative
It breaks some styles

--- a/app/styles/_comments.sass
+++ b/app/styles/_comments.sass
@@ -162,7 +162,7 @@ form .upload_area
       height: 40px
       text-align: right
   .info
-    position: absolute
+    position: relative
     top: 5px
     left: 5px
     .micro_avatar
