--- a/app/styles/_threads.sass
+++ b/app/styles/_threads.sass
@@ -9,6 +9,8 @@ $comments_bkg: #fafafa
     border-left: 4px solid $comments_left_border
     background-color: $comments_left_border
     +gradient($comments_left_border, $comments_bkg)
+    .info
+      position: absolute
     .block a
       font-weight: bold
       text-decoration: none
