Compact / expanded view for threads
Threads are now expanded by default.
It's possible to contract them or expand them by clicking on the title.
You can also choose the compact mode for a briefer overview.

--- a/app/styles/_sidebar.sass
+++ b/app/styles/_sidebar.sass
@@ -92,6 +92,8 @@
       background-image: url(/famfamfam/date.png)
     &.settings
       background-image: url(/famfamfam/cog.png)
+    &.collapsed_mode, &.expanded_mode
+      background-image: url(/famfamfam/layers.png)
     &.loading
       background-image: url(/images/loading.gif)
     &.show_more, &.show_less
