--- a/app/styles/_shared.sass
+++ b/app/styles/_shared.sass
@@ -4,6 +4,8 @@ $text: #010101
 $typeface: "Lucida Grande", Tahoma, Verdana, Helvetical, sans-serif
 $link: #259bad
 $link_hover: #df5249
+$comments_left_border: #f2f2f2
+$comments_bkg: #fafafa
 
 // fix for IE7, http://flipc.blogspot.com/2009/02/damn-ie7-and-inline-block.html
 =inline-block($height)
