--- a/app/styles/_threads.sass
+++ b/app/styles/_threads.sass
@@ -1,7 +1,5 @@
-$comments_left_border: #f2f2f2
-$comments_bkg: #fafafa
 .thread
-  margin: 35px 0
+  margin: 20px 0 35px
   .comments
     border-left: 4px solid $comments_left_border
     background-color: $comments_bkg
@@ -11,12 +9,22 @@ $comments_bkg: #fafafa
     +gradient($comments_left_border, $comments_bkg)
     .info
       position: absolute
-    .block a
-      font-weight: bold
-      text-decoration: none
-      color: black
-      &:hover
-        color: $link_hover
+    .block
+      a
+        font-weight: bold
+        text-decoration: none
+        color: black
+        &:hover
+          color: $link_hover
+      p
+        margin: 4px 0 8px
+  span.time
+    position: relative
+    float: right
+    padding: 4px 4px 0 0
+    font-size: 11px
+    color: #999
+    display: none
   .more_comments
     display: block
     font-size: 12px
@@ -55,3 +63,22 @@ $comments_bkg: #fafafa
     width: 0px
     border-top: 10px solid $navbar
     border-right: 10px solid transparent
+
+.thread.collapsed
+  span.time
+    display: inline-block
+  .comments, form
+    display: none
+
+#activities
+  .comment_header
+    cursor: pointer
+    &:hover
+      border-left-color: $navbar
+      +gradient($comments_left_border - #111, $comments_bkg - #111)
+
+#activities.collapsed
+  .thread
+    margin: 0 0 20px
+  .thread.collapsed
+    margin: 0
