--- a/app/views/activities/_thread.haml
+++ b/app/views/activities/_thread.haml
@@ -13,14 +13,14 @@
       - case thread
       - when Conversation
         - if thread.to_s.present?
-          %p= t(".conversation_with_title_html",
+          %p.thread_title= t(".conversation_with_title_html",
               :conversation => link_to(thread, [thread.project, thread]),
               :project => link_to(thread.project, thread.project))
         - else
           %p= t(".conversation_without_title_html",
               :project => link_to(thread.project, thread.project))
       - when Task
-        %p= t(".task_on_task_list_html",
+        %p.thread_title= t(".task_on_task_list_html",
             :task => link_to(thread, [thread.project, thread]),
             :task_list => link_to(thread.task_list, [thread.task_list.project, thread.task_list]))
         %p= link_to thread.project, thread.project
