Feature, add watchers#index

--- a/app/styles/application.sass
+++ b/app/styles/application.sass
@@ -23,6 +23,7 @@
 @import teambox_data
 @import google_docs
 @import sidebar
+@import watch_list
 
 @import calendar_date_select
 @import autocomplete
