fix compact navigation on threads with no comments

--- a/app/views/activities/_thread.haml
+++ b/app/views/activities/_thread.haml
@@ -6,7 +6,7 @@
 .thread{ :'data-id' => thread.id, :'data-class' => thread_class, :id => "thread_#{thread_id}" }
   -# Title of the element
   .comment.comment_header
-    %span.time= posted_date comments.first.created_at
+    %span.time= posted_date(comments.first ? comments.first.created_at : thread.created_at)
     .info
       - icon = { "Conversation" => "comment", "Task" => "tick" }[thread.class.to_s]
       %img{ :src => "/famfamfam/#{icon}.png", :style => 'padding: 4px' }
