Differentiating the typography for "show full comment"

--- a/app/styles/_threads.sass
+++ b/app/styles/_threads.sass
@@ -63,6 +63,8 @@
     width: 0px
     border-top: 10px solid $navbar
     border-right: 10px solid transparent
+    font-weight: bold
+    font-size: 10px
 
 .thread.collapsed
   span.time
