Fixes the inline image problem seen here http://grab.by/grabs/ab0e6b66a0de09a7e0c876f5c701749e.png

--- a/app/styles/_comments.sass
+++ b/app/styles/_comments.sass
@@ -203,6 +203,8 @@ form .upload_area
         font-weight: bold
       .before:first-child+p
         display: inline
+        img
+          display: block
       p
         margin: 8px 0
       overflow: hidden
