Fixing height for uploads' header

--- a/app/styles/_uploads.sass
+++ b/app/styles/_uploads.sass
@@ -14,6 +14,7 @@ $upload_icon_width: 16px
       display: block
       margin: 0
       padding: 0
+      height: auto
       cursor: pointer
     .icon, .file, .size, .author, .more
       display: inline-block
